--- a/job-post.html
+++ b/job-post.html
@@ -268,129 +268,7 @@
 
     <div class="job-page sp">
       <div class="container">
-        <div class="row" id="job-list">
-          <!-- <div class="col-lg-4 col-md-6">
-            <div class="job-post-box">
-              <p class="tag" lang="lang-job-freelance">Freelance</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image1.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">GlobalHire Clients</a>
-                  <p>Europe</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Optical Fiber</h5>
-                <h6>Up-to €10.000 / Month</h6>
-              </div>
-              <div class="button">
-                <a class="job-learn" href="job-details.html?jobId=123" lang="lang-job-view_detail">View Details <span><i class="fa-solid fa-arrow-right"></i></span></a>
-            </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="job-post-box">
-              <p class="tag" lang="lang-job-part_time">Part Time</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image2.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">Creative Hive</a>
-                  <p>Paris, France</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Social Media Specialist</h5>
-                <h6>€1700 / Month</h6>
-              </div>
-              <div class="button"></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="job-post-box">
-              <p class="tag" lang="lang-job-full_time">Full Time</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image3.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">Pixel Innovations</a>
-                  <p>San Francisco, USA</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Product Designer</h5>
-                <h6>€3000 / Month</h6>
-              </div>
-              <div class="button"></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="job-post-box mt-30">
-              <p class="tag" lang="lang-job-internship">Internship</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image4.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">GreenTech Ventures</a>
-                  <p>Melbourne, Australia</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Marketing Assistant</h5>
-                <h6>€500 / Month</h6>
-              </div>
-              <div class="button"></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="job-post-box mt-30">
-              <p class="tag" lang="lang-job-full_time">Full Time</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image5.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">Horizon Technologies</a>
-                  <p>Toronto, Canada</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Software Engineer</h5>
-                <h6>€2700 / Month</h6>
-              </div>
-              <div class="button"></div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <div class="job-post-box mt-30">
-              <p class="tag" lang="lang-job-freelance">Freelance</p>
-              <div class="job-owners-area">
-                <div class="image">
-                  <img src="assets/img/job-post/job-post-image6.png" alt="" />
-                </div>
-                <div class="text">
-                  <a href="#">Vivid Studio</a>
-                  <p>Dhaka, Bangladesh</p>
-                </div>
-              </div>
-              <div class="divider"></div>
-              <div class="work-info">
-                <h5>Ui/Ux Designer</h5>
-                <h6>€1800 / Month</h6>
-              </div>
-              <div class="button"></div>
-            </div>
-          </div> -->
+        <div class="row" id="job-list" style="row-gap: 15px;">
         </div>
       </div>
     </div>
